# zshrs-kubectl-completion

./: Cargo.toml  LICENSE  README.md  znative.toml  zpm.toml
docs/: index.md
src/: lib.rs
